force-app/main/default/objects/Activity/fields/Assigned_to_Me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Me__c</fullName>
    <description>Formula field checkbox to assign the activity to user.</description>
    <formula>Owner:User.Id =  $User.Id</formula>
    <label>Assigned to Me</label>
    <type>Checkbox</type>
</CustomField>