force-app/main/default/objects/Activity/fields/Legacy_SFDC_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SFDC_Record_ID__c</fullName>
    <description>Field to store Legacy SFDC Record ID.</description>
    <externalId>true</externalId>
    <label>Legacy SFDC Record ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>