force-app/main/default/objects/Activity/fields/openq__Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>openq__Date_Completed__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>