force-app/main/default/objects/Activity/fields/openq__Interaction_Type1_3__c.field-meta.xml
<CustomField>
    <fullName>openq__Interaction_Type1_3__c</fullName>
    <label>Activity 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Consulting</fullName>
            </value>
            <value>
                <fullName>Education &amp; Training</fullName>
            </value>
            <value>
                <fullName>Executive Meeting</fullName>
            </value>
            <value>
                <fullName>Health Care Economics</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Professional Societies</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>