force-app/main/default/objects/Activity/fields/SVMXC__Driving_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Driving_Time__c</fullName>
    <description>Driving or travel time to this work order location from the last work order location or from the home base.</description>
    <inlineHelpText>Driving or travel time to this work order location from the last work order location or from the home base.</inlineHelpText>
    <label>Travel Time to Workorder Location (Mins)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>