force-app/main/default/objects/Activity/fields/SVMXC__Service_Duration__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Duration__c</fullName>
    <description>Total service time, which is the wrench time of the service</description>
    <inlineHelpText>Total service time or the wrench time of the service.</inlineHelpText>
    <label>Service Time (in Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>