force-app/main/default/objects/Activity/fields/SVMXC__SM_Latitude__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Latitude__c</fullName>
    <description>This field is created to store the latitude of the non work order events of the technicians.</description>
    <inlineHelpText>This field is created to store the latitude of the non work order events of the technicians.</inlineHelpText>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>