force-app/main/default/objects/Activity/fields/SVMXC__SM_Optimizer_Message_Creation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Optimizer_Message_Creation_Date_Time__c</fullName>
    <description>This field is used to store the date and time of the message generated by the external optimization system that is successfully processed in ServiceMax . The date and time stamp is when the message was created by the external optimization system and sent to ServiceMax.</description>
    <label>Optimizer Message Creation Date Time</label>
    <type>DateTime</type>
</CustomField>